kubemanifets/mysqldeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate    
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - name: mypvc
            mountPath: /var/lib/mysql 
      volumes:
        - name:  mypvc
          persistentVolumeClaim:
            claimName: mypvc
