kubemanifets/mysqlservice.yml
apiVersion: v1
kind: Service
metadata:
  name: mysqlservice
spec:
  selector:
    app: mysql
  type: ClusterIP  
  ports:
  - port: 3306
    targetPort: 3306
